# lilsim

./: .clang-format  .clang-tidy  .clang-tidy_old  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  TODO.md  asan_suppressions.txt  gen_python_protobuf.sh  imgui.ini  lsan_suppressions.txt  run_debug.sh  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
comm/: CMakeLists.txt  README.md  messages.pb.cc  messages.pb.h  messages.proto
comm/include/comm/: CommServer.hpp  endpoints.hpp  zmq_helpers.hpp
comm/src/: CommServer.cpp  zmq_helpers.cpp
common/: CMakeLists.txt
common/include/: CarDefaults.hpp  Constants.hpp  Position.hpp  SE2.hpp
common/src/: SE2.cpp
models/cars/: CMakeLists.txt  example_car.yaml
models/cars/include/: base.h  macros.h  macros.hpp
models/cars/src/: kinematic_single_track.cpp
python_sdk/: example_controller.py  extra.ipynb  main.ipynb  requirements.txt  setup.py  splinepath.py  test_all_features.ipynb  test_basic.py  testing.ipynb  vehiclecontrol.py
python_sdk/lilsim/: __init__.py  client.py  messages_pb2.py  utils.py
python_sdk/lilsim/comm/: messages_pb2.py
scene/: CMakeLists.txt
scene/include/: TrackLoader.hpp  scene.hpp
scene/src/: TrackLoader.cpp
scripts/: gen_python_protobuf.sh  setup_linux.sh
sim/: CMakeLists.txt
sim/include/: ModelLoader.hpp  simulator.hpp
sim/src/: ModelLoader.cpp  simulator.cpp
toolchains/: clang-libc++.cmake
tracks/: acceleration.csv  comp_2021.csv  peanut.csv  skidpad.csv
triplets/: x64-linux-clang.cmake
viz/: CMakeLists.txt
viz/include/: KeyBindings.hpp  MarkerSystem.hpp  TextureManager.hpp  viz.hpp
viz/include/panels/: SidePanel.hpp  ViewportPanel.hpp
viz/resources/: lilsim_gui_config.default.yaml
viz/src/: KeyBindings.cpp  MarkerSystem.cpp  TextureManager.cpp  viz.cpp
viz/src/panels/: SidePanel.cpp  ViewportPanel.cpp
